style: Make it prettier

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>calendar</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&display=swap");
+    </style>
   </head>
   <body>
-    <table style="display: inline-table;">
+    <table style="display: inline-table">
       <caption>
         December 2020
+        <hr />
       </caption>
       <thead>
         <tr>
@@ -28,7 +32,7 @@
         <tr>
           <td class="day"></td>
           <td class="day"></td>
-          <td bgcolor="aquamarine">1</td>
+          <td bgcolor="#2d94f0">1</td>
           <td class="day">2</td>
           <td class="day">3</td>
           <td class="day">4</td>
@@ -73,24 +77,25 @@
       </tbody>
     </table>
 
-    <ul style="list-style-type: square; width: 25%; display: inline-table;">
-      <li style="color: indianred">
-        <strong style="color: black"> Daily</strong>
+    <ul style="list-style-type: square; width: 25%; display: inline-table">
+      <li style="color: #f56b69">
+        <span> Daily</span>
       </li>
-      <li style="color: moccasin">
-        <strong style="color: black"> Weekly</strong>
+      <li style="color: #ecac4b">
+        <span> Weekly</span>
       </li>
-      <li style="color: aquamarine">
-        <strong style="color: black"> Monthly</strong>
+      <li style="color: #2d94f0">
+        <span> Monthly</span>
       </li>
-      <li style="color: gray">
-        <strong style="color: black"> Yearly</strong>
+      <li style="color: #98a1aa">
+        <span> Yearly</span>
       </li>
     </ul>
 
     <table>
       <caption>
         January 2021
+        <hr />
       </caption>
       <thead>
         <tr>
@@ -117,16 +122,16 @@
           <td class="day holiday">3</td>
           <td class="day">4</td>
           <td class="day">5</td>
-          <td bgcolor="indianred">6</td>
-          <td bgcolor="indianred">7</td>
-          <td bgcolor="indianred">8</td>
-          <td bgcolor="indianred">9</td>
+          <td bgcolor="#f56b69">6</td>
+          <td bgcolor="#f56b69">7</td>
+          <td bgcolor="#f56b69">8</td>
+          <td bgcolor="#f56b69">9</td>
         </tr>
         <tr>
-          <td bgcolor="indianred">10</td>
-          <td bgcolor="indianred">11</td>
-          <td bgcolor="indianred">12</td>
-          <td bgcolor="indianred">13 (today)</td>
+          <td bgcolor="#f56b69">10</td>
+          <td bgcolor="#f56b69">11</td>
+          <td bgcolor="#f56b69">12</td>
+          <td bgcolor="#f56b69">13 (today)</td>
           <td class="day">14</td>
           <td class="day">15</td>
           <td class="day">16</td>
